[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/objects/GameEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/objects/GameMovingEnemy.gd" type="Script" id=2]

[node name="GameMovingEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="PlatformDetector" type="RayCast2D" parent="." index="4"]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 8

[node name="FloorDetectorLeft" type="RayCast2D" parent="." index="5"]
position = Vector2( -15, -4 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 24

[node name="FloorDetectorRight" type="RayCast2D" parent="." index="6"]
position = Vector2( 15.5, -4 )
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 24

[node name="MoveCooldown" type="Timer" parent="." index="8"]
wait_time = 2.0
one_shot = true

[editable path="Data/GameHitbox"]
